tests/NormalTests/paczka2/big_fuzzy/64536256.err
Error in line 9: NPpyGh7LtRs S620 96,4
Error in line 24: 1HT A228 14,4
Error in line 29: 1HT S328 44,7
Error in line 43: pl4e9tS S620 45,1
Error in line 48: wQ1h6jtKxK A171 35,0
Error in line 57: NPpyGh7LtRs S620 59,9
Error in line 53: 7JEv A228 25,7
Error in line 34: S620 A171 198,6
Error in line 83: NPpyGh7LtRs A228 30,6
Error in line 88: NPpyGh7LtRs S620 79,6
Error in line 95: S620 A171 -4,9
Error in line 91: S620 A171 78,1
Error in line 100: 7JEv A228 87,7
Error in line 98: S620 A228 5,5
Error in line 109: 1HT A171 67,1
Error in line 90: NPpyGh7LtRs A228 70,4
Error in line 110: 7JEv A171 315,8
Error in line 118: 7JEv S328 53,5
Error in line 127: 1HT A228 19,3
Error in line 142: F6XsWvhBXqK S328 30,4
Error in line 144: S620 S620 25,3
Error in line 158: wQ1h6jtKxK A171 -1,3
Error in line 155: S620 A228 63,8
Error in line 159: S620 S328 40,6
Error in line 146: F6XsWvhBXqK S620 79,9
Error in line 161: F6XsWvhBXqK A171 50,7
Error in line 173: wQ1h6jtKxK A171 -3,6
Error in line 174: pl4e9tS A171 5,6
Error in line 178: pl4e9tS S328 42,3
Error in line 181: 1HT A228 41,6
Error in line 183: 1HT A171 36,7
Error in line 199: wQ1h6jtKxK S328 70,7
Error in line 201: wQ1h6jtKxK A22? 195,0
Error in line 200: wQ1h6jtKxK A228 64,8
Error in line 210: F6XsWvhBXqK S328 25,3
Error in line 232: pl4e9tS S328 66,2
Error in line 234: pl4e9tS A228 84,7
Error in line 244: NPpyGh7LtRs A171 71,2
